# ivacam

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ABOUT.md  AGENTS.md  ARCHITECTURE.md  BUILDING.md  BUILDING_WINDOWS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  deny.toml  justfile  rustfmt.toml  test.vc-project.json
.beads/: metadata.json
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release-desktop.yml
assets/: README.md  ivaCAM-Logo.FCStd
bridge/: Dockerfile  README.md  docker-compose.yml  requirements.txt
bridge/wiac_bridge/: __init__.py  __main__.py  main.py
crates/ivac-cli/: Cargo.toml
crates/ivac-cli/src/: main.rs
crates/ivac-core/: Cargo.toml
crates/ivac-core/benches/: pipeline.rs
crates/ivac-core/src/: cam.rs  cancel.rs  errors.rs  gcode.rs  geometry.rs  input.rs  lib.rs  math.rs  pipeline.rs  pipeline_cache.rs  project.rs  schema.rs  testing.rs  version.rs
crates/ivac-core/src/cam/: chaining.rs  chamfer.rs  geometry_cache.rs  halfpipe.rs  inscribed.rs  offsets.rs  raster.rs  setup.rs  source_combine.rs  spatial.rs  surface.rs  surface_mill.rs  tabs.rs  thread.rs  trochoidal.rs  vcarve.rs  vcarve_emit.rs
crates/ivac-core/src/cam/offsets/: mod.rs  parallel.rs  pocket_fill.rs  tabs.rs  winding.rs
crates/ivac-core/src/gcode/: arc_fit.rs  emit.rs  entry.rs  face_mill_overlay.rs  grbl.rs  hpgl.rs  leads.rs  linuxcnc.rs  order.rs  post_profile.rs  preview.rs  tabs.rs  walk.rs  z_schedule.rs
crates/ivac-core/src/input/: dxf_in.rs  hatch.rs  intern.rs  nurbs.rs  svg_font.rs  svg_in.rs  text.rs
crates/ivac-core/src/pipeline/: frame.rs  offset_builder.rs  op_drivers.rs  patterns.rs  regions.rs  selection.rs  setup_resolver.rs  tabs.rs  test_helpers.rs  tests.rs  warnings.rs
crates/ivac-core/src/pipeline/op_drivers/: drill.rs  dual_tool.rs  halfpipe.rs  raster.rs  surface_mill.rs  thread.rs  vcarve.rs
crates/ivac-core/src/project/: config.rs  fixture.rs  machine.rs  op.rs  params.rs  text.rs  tool.rs
crates/ivac-core/src/sim/: diagnostics.rs  fixture_check.rs  heightmap.rs  holder.rs  holder_check.rs  mod.rs  rapid_check.rs  stl.rs  sweep.rs  timing.rs
crates/ivac-core/tests/: golden_corpus.rs  snapshots_drill_tabs_whirl.rs  tessellation_tolerance.rs  text_rendering.rs  volume_validation.rs
crates/ivac-core/tests/common/: mod.rs
crates/ivac-core/tests/volume_validation/: chamfer.rs  drill.rs  gcode_include.rs  pocket.rs  profile.rs  v5az.rs
crates/ivac-server/: Cargo.toml
crates/ivac-server/src/: main.rs
crates/ivac-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/ivac-tauri/capabilities/: default.json  desktop.json
crates/ivac-tauri/icons/: README.md  icon.icns
crates/ivac-tauri/src/: commands.rs  lib.rs  main.rs
crates/ivac-wasm/: Cargo.toml
crates/ivac-wasm/src/: lib.rs  sim.rs
crates/wiac-cli/: Cargo.toml
crates/wiac-cli/src/: main.rs
crates/wiac-core/: Cargo.toml
crates/wiac-core/benches/: pipeline.rs
crates/wiac-core/src/: cam.rs  error.rs  errors.rs  gcode.rs  geometry.rs  input.rs  lib.rs  math.rs  pipeline.rs  pipeline_cache.rs  project.rs  schema.rs  testing.rs
crates/wiac-core/src/cam/: chaining.rs  chamfer.rs  geometry_cache.rs  halfpipe.rs  inscribed.rs  offsets.rs  raster.rs  setup.rs  source_combine.rs  surface.rs  surface_mill.rs  tabs.rs  thread.rs  trochoidal.rs  vcarve.rs  vcarve_emit.rs
crates/wiac-core/src/gcode/: arc_fit.rs  entry.rs  face_mill_overlay.rs  grbl.rs  hpgl.rs  leads.rs  linuxcnc.rs  order.rs  post_profile.rs  preview.rs  tabs.rs  walk.rs  wirbeln.rs  z_schedule.rs
crates/wiac-core/src/input/: dxf_in.rs  hatch.rs  intern.rs  nurbs.rs  svg_font.rs  svg_in.rs  text.rs
crates/wiac-core/src/pipeline/: frame.rs  offset_builder.rs  op_drivers.rs  patterns.rs  regions.rs  selection.rs  setup_resolver.rs  tabs.rs  test_helpers.rs  tests.rs  warnings.rs
crates/wiac-core/src/pipeline/op_drivers/: drill.rs  dual_tool.rs  halfpipe.rs  raster.rs  surface_mill.rs  thread.rs  vcarve.rs
crates/wiac-core/src/project/: op.rs  params.rs  text.rs  tool.rs
crates/wiac-core/src/sim/: diagnostics.rs  fixture_check.rs  heightmap.rs  holder.rs  holder_check.rs  mod.rs  rapid_check.rs  stl.rs  sweep.rs  timing.rs
crates/wiac-core/tests/: chamfer_volume_validation.rs  drill_volume_validation.rs  golden_corpus.rs  pocket_volume_validation.rs  profile_volume_validation.rs  snapshots_drill_tabs_whirl.rs  snapshots_drill_tabs_wirbeln.rs  tessellation_tolerance.rs  text_rendering.rs  v5az_chamfer_after_pocket.rs  volume_validation.rs
crates/wiac-core/tests/common/: mod.rs
crates/wiac-core/tests/volume_validation/: chamfer.rs  drill.rs  gcode_include.rs  pocket.rs  profile.rs  v5az.rs
crates/wiac-server/: Cargo.toml
crates/wiac-server/src/: main.rs
crates/wiac-tauri/: Cargo.toml  tauri.conf.json
crates/wiac-tauri/capabilities/: default.json
crates/wiac-tauri/icons/: README.md  icon.icns
crates/wiac-tauri/src/: commands.rs  main.rs  menu.rs  watcher.rs
crates/wiac-wasm/: Cargo.toml
crates/wiac-wasm/src/: lib.rs  sim.rs
deploy/: Caddyfile  README.md  nginx.conf
docs/: ABOUT.md  BUILDING.md  BUILDING_WINDOWS.md  CONTRIBUTING.md  FDROID.md  QUICKSTART.md  SIGNING.md  kbx5-plan.md  smoke-test-v0.0.0.md
docs/i18n/: PLAN.md  QNA_I18N.md  glossary-de.md
frontend/: .prettierignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/fonts/: README.md
frontend/public/samples/: all.json  simple-generated-tabs.json  simple-tabs.json  simple.json
frontend/scripts/: ensure-wasm-fresh.mjs  i18n-codegen.mjs
frontend/src/: App.svelte  app.css
frontend/src/dev/: heightfield_demo.ts
schema/: openapi.yaml
scripts/: bump-version.sh  gen-android-adaptive-icon.py  pre-release.sh  stage-artifacts.sh  strip-appimage-media.sh  ui-smoke-table.mjs  ui-smoke-tabs.mjs  ui-smoke.sh
tests/: bench-baseline.md
tests/fixtures/: test.vc-project.json
tests/golden/: README.md  refresh.py
xtask/: Cargo.toml
xtask/src/: main.rs
(+310 files in other folders)
