[workspace]
resolver = "2"
members = [
    "crates/wiac-core",
    "crates/wiac-cli",
    "crates/wiac-server",
    "crates/wiac-tauri",
    "crates/wiac-wasm",
    "xtask",
]

# Default `cargo build` / `cargo test` only walk these — the Tauri shell
# pulls in GTK/WebKit system libs (apt: libwebkit2gtk-4.1-dev libgtk-3-dev
# libayatana-appindicator3-dev librsvg2-dev) that are only relevant on a
# desktop developer machine. CI builds it explicitly via `cargo build -p
# wiac-tauri` when those deps are present.
default-members = [
    "crates/wiac-core",
    "crates/wiac-cli",
    "crates/wiac-server",
    "crates/wiac-wasm",
    "xtask",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.78"
license = "GPL-3.0-or-later"
repository = "https://github.com/wiaconstructor/wiaconstructor"
authors = ["wiaConstructor contributors"]
publish = false

[workspace.lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
# Core deps shared across crates
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates.
wiac-core = { path = "crates/wiac-core" }

# Pure-Rust Voronoi/Delaunay (MIT) — used by the V-Carve operation to
# build the medial axis of densified region boundaries. We disable the
# default `rayon` feature so we don't pull a thread pool into the wasm
# build for the sake of a one-time triangulation.
voronator = { version = "0.2", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.release-wasm]
inherits = "release"
opt-level = "z"
