[workspace]
resolver = "2"
members = [
    "crates/wiac-core",
    "crates/wiac-cli",
    "crates/wiac-server",
    "crates/wiac-tauri",
    "crates/wiac-wasm",
    "xtask",
]

# Default `cargo build` / `cargo test` only walk these — the Tauri shell
# pulls in GTK/WebKit system libs (apt: libwebkit2gtk-4.1-dev libgtk-3-dev
# libayatana-appindicator3-dev librsvg2-dev) that are only relevant on a
# desktop developer machine. CI builds it explicitly via `cargo build -p
# wiac-tauri` when those deps are present.
default-members = [
    "crates/wiac-core",
    "crates/wiac-cli",
    "crates/wiac-server",
    "crates/wiac-wasm",
    "xtask",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.80"
license = "GPL-3.0-or-later"
repository = "https://github.com/wiaconstructor/wiaconstructor"
authors = ["wiaConstructor contributors"]
publish = false

[workspace.lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Subjective-pedantic lints that fire pervasively on deliberate CAM /
# geometry / numerics code where they're idiomatic (single-char x/y/r/t,
# long math routines, many-arg emit helpers). Allowed in the same spirit
# as the three above — keeps `-D warnings` meaningful for real issues.
too_many_lines = "allow"
too_many_arguments = "allow"
similar_names = "allow"
many_single_char_names = "allow"
# Fires only on test fixtures (`let mut x = T::default(); x.f = …`) where
# it's idiomatic, and on readable lib code where a helper fn/const after a
# couple of statements is clearer than hoisting it. Both are commonly
# allowed; keeps the gate focused on substantive lints.
field_reassign_with_default = "allow"
items_after_statements = "allow"

[workspace.dependencies]
# Core deps shared across crates
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates.
wiac-core = { path = "crates/wiac-core" }

# Pure-Rust Voronoi/Delaunay (MIT) — used by the V-Carve operation to
# build the medial axis of densified region boundaries. We disable the
# default `rayon` feature so we don't pull a thread pool into the wasm
# build for the sake of a one-time triangulation.
voronator = { version = "0.2", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.release-wasm]
inherits = "release"
opt-level = "z"
