[workspace]
resolver = "2"
members = [
    "crates/ivac-core",
    "crates/ivac-cli",
    "crates/ivac-server",
    "crates/ivac-tauri",
    "crates/ivac-wasm",
    "xtask",
]

# Default `cargo build` / `cargo test` only walk these — the Tauri shell
# pulls in GTK/WebKit system libs (apt: libwebkit2gtk-4.1-dev libgtk-3-dev
# libayatana-appindicator3-dev librsvg2-dev) that are only relevant on a
# desktop developer machine. CI builds it explicitly via `cargo build -p
# ivac-tauri` when those deps are present.
default-members = [
    "crates/ivac-core",
    "crates/ivac-cli",
    "crates/ivac-server",
    "crates/ivac-wasm",
    "xtask",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "GPL-3.0-or-later"
repository = "https://github.com/ivacam/ivacam"
authors = ["ivaCAM contributors"]
publish = false

[workspace.lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# ivr0: pedantic is OFF by default. The pedantic rule set adds ~150
# extra lints that walk the AST on every clippy invocation, and
# almost all of its value lives at the pre-release gate, not the
# inner dev loop. `scripts/pre-release.sh` re-enables it explicitly
# via `cargo clippy --workspace --all-targets -- -W clippy::pedantic
# -D warnings` so the strict check still fires before release.
# Day-to-day `cargo clippy` skips the pedantic walk entirely.
pedantic = { level = "allow", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Subjective-pedantic lints that fire pervasively on deliberate CAM /
# geometry / numerics code where they're idiomatic (single-char x/y/r/t,
# long math routines, many-arg emit helpers). Kept as explicit
# `allow` so re-enabling pedantic at the gate doesn't fire on
# them — they're idiomatic for this codebase regardless of gate vs
# loop.
too_many_lines = "allow"
too_many_arguments = "allow"
similar_names = "allow"
many_single_char_names = "allow"
# Fires only on test fixtures (`let mut x = T::default(); x.f = …`) where
# it's idiomatic, and on readable lib code where a helper fn/const after a
# couple of statements is clearer than hoisting it. Both are commonly
# allowed; keeps the gate focused on substantive lints.
field_reassign_with_default = "allow"
items_after_statements = "allow"

[workspace.dependencies]
# Core deps shared across crates
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates.
ivac-core = { path = "crates/ivac-core" }

# Pure-Rust Voronoi/Delaunay (MIT) — used by the V-Carve operation to
# build the medial axis of densified region boundaries. We disable the
# default `rayon` feature so we don't pull a thread pool into the wasm
# build for the sake of a one-time triangulation.
voronator = { version = "0.2", default-features = false }

# rhn5: shrink dev debug-info so object files + the link step are
# smaller. `line-tables-only` keeps backtraces resolving to file:line
# in panics + debugger stack frames but drops the variable / type
# metadata that fattens .o files (and that we never look at on a
# CAM debugger session). `split-debuginfo = "unpacked"` moves what
# remains into sidecar files so the binary itself stays small and
# the linker has less to merge. `incremental = true` is the cargo
# default but worth making explicit so a feature combinator can't
# silently flip it off (e.g. some CI envs set CARGO_INCREMENTAL=0).
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"
incremental = true

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.release-wasm]
inherits = "release"
opt-level = "z"
