[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
wiac-core = { workspace = true, features = ["pocket-cascade"] }
