[package]
name = "ivac-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "ivaCAM HTTP server (axum) exposing the JSON contract"

[[bin]]
name = "ivac-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ivac-core = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "fs", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["cors", "trace"] }
