[package]
name = "wiac-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "wiaConstructor headless CLI converter"

[[bin]]
name = "wiac"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
wiac-core = { workspace = true, features = ["pocket-cascade"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
