[package]
name = "wiac-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "wiaConstructor core: DXF/SVG import, CAM math, gcode generation"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dxf = "0.6"
cavalier_contours = "0.7"
clipper2 = { version = "0.5", optional = true }
schemars = { version = "0.8", features = ["preserve_order"] }
ttf-parser = "0.25"

[features]
default = ["pocket-cascade"]
# Inward-cascade pocketing via clipper2. Disable for wasm32-unknown-unknown
# builds where the C++ stdlib isn't available — the rest of the CAM core
# (parallel offsets, gcode emit, tabs, drag-knife) keeps working.
pocket-cascade = ["dep:clipper2"]

[dev-dependencies]
ttf-parser = "0.25"
criterion = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support"] }

[[bench]]
name = "pipeline"
harness = false
