[package]
name = "wiac-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "wiaConstructor Tauri desktop shell"

[[bin]]
name = "wiac-desktop"
path = "src/main.rs"

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
wiac-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = "0.4"
# `devtools` enables right-click → Inspect Element in release builds.
# Cost measured at +12 KB on the wiac-desktop binary (15.82 → 15.83 MB,
# 0.08%); negligible. The earlier "1.5 MB" estimate was a measurement
# error — it compared `cargo build` vs `cargo tauri build`, conflating
# the cost with Tauri's `custom-protocol` feature. Kept on because the
# inspector is the most reliable diagnostic path when a frontend bug
# bypasses the stderr logger.
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time"] }
notify = "8"

[target.'cfg(target_os = "linux")'.dependencies]
# Used to SIGKILL WebKitWebProcess children on app exit (2re4: Mesa
# libgallium's atexit destructor double-frees on Arch's libgallium-26;
# signal-kill skips the broken exit path entirely).
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[features]
# Engaged automatically by tauri-cli for release builds; isolates dev
# vs. production custom-protocol behavior. Don't add it to a default
# feature set — `cargo build` should match `cargo tauri dev`.
custom-protocol = ["tauri/custom-protocol"]
