[package]
name = "wiac-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "wiaConstructor WebAssembly bindings (browser-only mode)"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
wiac-core = { workspace = true }
# wasm-bindgen = "0.2"  # added in wiaconstructor-d0d.8 (WASM bindings)

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
