[package]
name = "wiac-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "wiaConstructor WebAssembly bindings (browser-only mode)"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
wiac-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
